fixed spelling msitake and wrapped labels to fix overflow

--- a/my-ts-react-app/src/sass/Home.scss
+++ b/my-ts-react-app/src/sass/Home.scss
@@ -36,6 +36,7 @@
 }
 .nav {
     position: fixed;
+    justify-content: center;
     display: flex;
     flex-direction: row;
     overflow: visible;
@@ -639,6 +640,7 @@
             width: 100%;
             @media screen and (max-width: $screen-width-sm) {
                 flex-basis: 100%;
+                width: 90%;
                 justify-content: center;
                 
             }
@@ -667,6 +669,7 @@
                 gap: 1.5rem;
                 ul {
                     display: flex;
+                    flex-wrap: wrap;
                     margin: 0;
                     padding: 0;
                     gap: 1rem;
